--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -162,11 +162,12 @@
                     android:id="@+id/iv_western"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="32dp"
                     android:src="@drawable/western"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/iv_popular"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginStart="30dp"/>
+                    app:layout_constraintVertical_bias="0.526" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -183,11 +184,15 @@
                     android:id="@+id/iv_dessert"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="32dp"
                     android:src="@drawable/dessert"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/iv_drinks"
+
+                    app:layout_constraintHorizontal_bias="0.13"
+                    app:layout_constraintStart_toEndOf="@+id/iv_western"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginEnd="@dimen/_30dp"/>
+                    app:layout_constraintVertical_bias="0.517" />
 
                 <TextView
                     android:layout_width="wrap_content"
