--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -129,103 +129,112 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <HorizontalScrollView
                 android:id="@+id/cl_category"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_20dp"
                 app:layout_constraintTop_toBottomOf="@+id/frameLayout4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">
 
-                <ImageView
-                    android:id="@+id/iv_popular"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/popular"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_5dp"
-                    android:text="@string/popular"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_16sp"
-                    app:layout_constraintEnd_toEndOf="@id/iv_popular"
-                    app:layout_constraintStart_toStartOf="@+id/iv_popular"
-                    app:layout_constraintTop_toBottomOf="@id/iv_popular" />
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <ImageView
+                            android:id="@+id/iv_popular"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/popular"
+                            />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_5dp"
+                            android:text="@string/popular"
+                            android:layout_marginStart="@dimen/_10dp"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/_16sp"
+                            />
+                    </LinearLayout>
 
 
-                <ImageView
-                    android:id="@+id/iv_western"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
-                    android:src="@drawable/western"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/iv_popular"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.526" />
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <ImageView
+                            android:id="@+id/iv_western"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_30dp"
+                            android:src="@drawable/western"
+                            />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_5dp"
-                    android:text="@string/western"
-                    android:textColor="@color/charcoal"
-                    android:textSize="@dimen/_16sp"
-                    app:layout_constraintEnd_toEndOf="@+id/iv_western"
-                    app:layout_constraintStart_toStartOf="@id/iv_western"
-                    app:layout_constraintTop_toBottomOf="@id/iv_western" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_5dp"
+                            android:text="@string/western"
+                            android:textColor="@color/charcoal"
+                            android:textSize="@dimen/_16sp"
+                            android:layout_marginStart="35dp"
+                           />
+                    </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/iv_dessert"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="32dp"
-                    android:src="@drawable/dessert"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/iv_drinks"
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <ImageView
+                            android:id="@+id/iv_dessert"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="30dp"
+                            android:src="@drawable/dessert"
+                             />
 
-                    app:layout_constraintHorizontal_bias="0.13"
-                    app:layout_constraintStart_toEndOf="@+id/iv_western"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.517" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_5dp"
+                            android:text="@string/dessert"
+                            android:textColor="@color/charcoal"
+                            android:textSize="@dimen/_16sp"
+                           android:layout_marginStart="35dp" />
+                    </LinearLayout>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_5dp"
-                    android:text="@string/dessert"
-                    android:textColor="@color/charcoal"
-                    android:textSize="@dimen/_16sp"
-                    app:layout_constraintEnd_toEndOf="@+id/iv_dessert"
-                    app:layout_constraintStart_toStartOf="@+id/iv_dessert"
-                    app:layout_constraintTop_toBottomOf="@+id/iv_dessert" />
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <ImageView
+                            android:id="@+id/iv_drinks"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/drinks"
+                            android:layout_marginStart="@dimen/_30dp"
+                             />
 
-                <ImageView
-                    android:id="@+id/iv_drinks"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/drinks"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_5dp"
+                            android:text="@string/drinks"
+                            android:textColor="@color/charcoal"
+                            android:textSize="@dimen/_16sp"
+                           android:layout_marginStart="35dp" />
+                    </LinearLayout>
+                </LinearLayout>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_5dp"
-                    android:text="@string/drinks"
-                    android:textColor="@color/charcoal"
-                    android:textSize="@dimen/_16sp"
-                    app:layout_constraintEnd_toEndOf="@+id/iv_drinks"
-                    app:layout_constraintStart_toStartOf="@+id/iv_drinks"
-                    app:layout_constraintTop_toBottomOf="@+id/iv_drinks" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </HorizontalScrollView>
 
 
             <TextView
